force-app/main/default/objects/Inventory__c/Inventory__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene cantidad total, reservas, muletos y disponibles de cada Punto de Venta / NMU</description>
    <label>Inventario</label>
    <nameField>
        <label>Werks y Nmu</label>
    </nameField>
    <pluralLabel>Inventarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>