force-app/main/default/objects/Inventory__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <description>Cantidad disponible</description>
    <label>Disponibles</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>