force-app/main/default/objects/Inventory__c/fields/BusinessSite__c.field-meta.xml
<CustomField>
    <fullName>BusinessSite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup a Business Site</description>
    <label>Punto de Venta</label>
    <referenceTo>BusinessSite__c</referenceTo>
    <relationshipLabel>Inventories</relationshipLabel>
    <relationshipName>Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>