force-app/main/default/objects/Inventory__c/fields/LockedByQuantity__c.field-meta.xml
<CustomField>
    <fullName>LockedByQuantity__c</fullName>
    <label>Bloqueos por Cantidad</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>