force-app/main/default/objects/Inventory__c/fields/LockedBySerial__c.field-meta.xml
<CustomField>
    <fullName>LockedBySerial__c</fullName>
    <label>Bloqueos Unitarios</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>