force-app/main/default/objects/Inventory__c/fields/mclv__c.field-meta.xml
<CustomField>
    <fullName>mclv__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Vendidos</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>