force-app/main/default/objects/Inventory__c/fields/mtdg__c.field-meta.xml
<CustomField>
    <fullName>mtdg__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Devuelto en Garantia</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>