force-app/main/default/objects/Inventory__c/fields/mtpl__c.field-meta.xml
<CustomField>
    <fullName>mtpl__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cantidad disponible</description>
    <label>Disponibles</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>