force-app/main/default/objects/Inventory__c/fields/mtpm__c.field-meta.xml
<CustomField>
    <fullName>mtpm__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Muletos</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>