force-app/main/default/objects/Inventory__c/fields/mtpo__c.field-meta.xml
<CustomField>
    <fullName>mtpo__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Muletos Prestados</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>