force-app/main/default/objects/Inventory__c/fields/mtre__c.field-meta.xml
<CustomField>
    <fullName>mtre__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bloqueos Unitarios</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>