force-app/main/default/objects/Inventory__c/fields/mtsc__c.field-meta.xml
<CustomField>
    <fullName>mtsc__c</fullName>
    <label>Siniestrados</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>