force-app/main/default/objects/Inventory__c/fields/Substitutes__c.field-meta.xml
<CustomField>
    <fullName>Substitutes__c</fullName>
    <label>Muletos</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>