force-app/main/default/objects/Inventory__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>Cantidad total de materiales del NMU / Punto de venta</description>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>