force-app/main/default/objects/Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BusinessSite__c</columns>
    <columns>Product__c</columns>
    <columns>LockedByQuantity__c</columns>
    <columns>LockedBySerial__c</columns>
    <columns>Available__c</columns>
    <columns>Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>